--- a/css/style.scss
+++ b/css/style.scss
@@ -525,8 +525,8 @@ body {
    position: relative;
    top: -2rem;
    transition: all .3s ease-in;
-   max-height: 600px;
-   max-width: 600px;
+   max-height: clamp(320px, 240px + 25vw, 600px);
+   max-width: clamp(320px, 240px + 25vw, 600px);
    overflow: hidden;
    background: var(--albumArt) no-repeat 0 0;
    background-size: cover;
@@ -542,8 +542,8 @@ body {
 
    #albumArt {
       transition: all 250ms ease-in-out;
-      max-width: 600px;
-      max-height:600px;
+      max-width: clamp(320px, 240px + 25vw, 600px);
+      max-height:clamp(320px, 240px + 25vw, 600px);
       width: 100%;
       height:100%;
       opacity: 1;
