--- a/css/style.scss
+++ b/css/style.scss
@@ -375,6 +375,9 @@ body {
       display: block;
       margin-bottom: .5rem;
       font-size: clamp(16px, 15.231px + 0.192vw, 18px);
+      max-inline-size: 50ch;
+      text-wrap: balance;
+
 
       &.h3 {
          font-size: clamp(22px, 15.662px + 1.69vw, 40px);
@@ -874,7 +877,7 @@ input[type="checkbox"]:checked~.menuIconToggle {
 }
 
 
-@media screen and (max-width:960px) and (max-height:480px) and (orientation:landscape) {
+@media screen and (max-width:960px) and (min-width:667px) and (min-height:375px) and (max-height:480px) and (orientation:landscape) {
    
    .mobile-swipe {
      display: grid;
